--- a/14-glm-practice-titanic.Rmd
+++ b/14-glm-practice-titanic.Rmd
@@ -45,11 +45,14 @@ Start with a simple model with the 3 predictors and no interactions. We are work
 m <- glm(survived ~ 
     age + fare + female, data = d, family = binomial(link = "logit")) # exercise
 arm::display(m)
-library(sjPlot)
-sjp.glm(m)
+
+plot(ggeffects::ggpredict(m)) %>%
+  cowplot::plot_grid(plotlist = .)
+
+sjPlot::plot_model(m, type = "est")
 ```
 
-Note that `sjp.glm()` is showing us *odds ratios*, not *log* odds ratios as we see with `summary()` or `arm::display()`.
+Note that `sjPlot::plot_model()` is showing us *odds ratios*, not *log* odds ratios as we see with `summary()` or `arm::display()`.
 
 In this initial model, how much greater are the odds of surviving for female passengers versus male passengers? 
 
