fix plots; ggeffects::ggpredict() full.data arg is deprecated
- see https://github.com/strengejacke/ggeffects/issues/193

--- a/12-glms.Rmd
+++ b/12-glms.Rmd
@@ -93,11 +93,11 @@ Let's fit a GLM that reflects these data.
 (m_gamma <- glm(y ~ x, family = 
     Gamma(link = "log"), data = d)) # exercise
 
-ggeffects::ggpredict(m_gamma, "x", full.data = TRUE) %>%
+ggeffects::ggpredict(m_gamma, "x") %>%
   ggplot(aes(x, predicted)) +
   geom_line(colour = "red") + 
   geom_ribbon(aes(ymin = conf.low, ymax = conf.high), alpha = .2) +
-  geom_point(aes(y = observed))
+  geom_point(data = d, aes(x = x, y = y))  # plot simulated observations on top of predictions
 ```
 
 ## Poisson, log link
@@ -117,11 +117,11 @@ What are some examples of data sets that might resemble this?
 (m_poisson <- glm(y ~ x, family = 
     poisson(link = "log"), data = d)) # exercise
 
-ggeffects::ggpredict(m_poisson, "x", full.data = TRUE) %>%
+ggeffects::ggpredict(m_poisson, "x") %>%
   ggplot(aes(x, predicted)) +
   geom_line(colour = "red") + 
   geom_ribbon(aes(ymin = conf.low, ymax = conf.high), alpha = .2) +
-  geom_point(aes(y = observed))
+  geom_point(data = d, aes(x = x, y = y))
 ```
 
 ## Negative binomial, log link
@@ -144,11 +144,11 @@ We have to use a special function to fit the negative binomial GLM in R:
 ```{r}
 (m_nb <- MASS::glm.nb(y ~ x, data = d))
 
-ggeffects::ggpredict(m_nb, "x", full.data = TRUE) %>%
+ggeffects::ggpredict(m_nb, "x") %>%
   ggplot(aes(x, predicted)) +
   geom_line(colour = "red") + 
   geom_ribbon(aes(ymin = conf.low, ymax = conf.high), alpha = .2) +
-  geom_point(aes(y = observed))
+  geom_point(data = d, aes(x = x, y = y))
 ```
 
 ## Binomial, logit link
@@ -171,11 +171,11 @@ In what scenario might you see this kind of data?
 (m_bin <- glm(y ~ x, family = 
     binomial(link = "logit"), data = d)) # exercise
 
-g <- ggeffects::ggpredict(m_bin, "x", full.data = TRUE) %>%
+g <- ggeffects::ggpredict(m_bin, "x") %>%
   ggplot(aes(x, predicted)) +
   geom_line(colour = "red") + 
   geom_ribbon(aes(ymin = conf.low, ymax = conf.high), alpha = .2) +
-  geom_point(aes(y = observed))
+  geom_point(data = d, aes(x = x, y = y))
 g
 
 coef(m_bin)
